# CMakeTutorial

./: .gitignore  CMake Tutorials.xmind  README.md  cmake.dio  cmake_help.txt  cmake_help_command_project.txt  cmake_help_variables.txt  sys_info.txt
docs/: 01_helloworld.md  02_common_cmd.md  02_common_script_commands.md  03_target.md  04_modules.md  05_thirty_part_library.md  06_cross_compiling.md  CMake Tutorials.xmind  index.md
examples/00_helloworld/: CMakeLists.txt  main.c
examples/01_common_cmd/: CMakeLists.txt  main.c  sys_info.txt
examples/03_target/01share_library/: CMakeLists.txt  main.c
examples/03_target/01share_library/math/: CMakeLists.txt  add.c
examples/03_target/02static_library/: CMakeLists.txt
examples/03_target/02static_library/math/: CMakeLists.txt  div.c  div.h
examples/03_target/03transitive_usage_requirements/: CMakeLists.txt  consumer.cpp
examples/03_target/04arguments/: CMakeLists.txt  config.h  config.h.in  main.c
examples/04_modules/01CMakePrintHelpers/: CMakeLists.txt  main.c
examples/04_modules/03CheckIncludeFile/: CMakeLists.txt  header.h  header.h.in  main.c
examples/04_modules/04CheckSymbolExists/: CMakeLists.txt  header.h.in  main.c
